fix mobile navbar on small screen

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -102,6 +102,10 @@ ul li {
   font-size: 0.6rem;
   background-color: #ffe400;
   height: 24px;
+
+  @media only screen and (max-width: 324px) {
+    font-size: 0.4rem;
+  }
 }
 
 /* Main section */
